--- a/part1.html
+++ b/part1.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Web Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h2>I am a student </h2>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1> <span class="name-highlight">Adrita</span> World </h1>
+            <h4>World Class Developer</h4>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit voluptate tempore natus vitae similique sint enim aperiam quidem praesentium adipisci et dolore, nihil excepturi provident quia, accusantium iusto quisquam labore unde! Ab quos quo similique est beatae, dignissimos officia asperiores fugiat quam aperiam numquam ratione inventore sint sequi voluptatibus eos.
+            </p>
+        </div>
+        <div class="half-width">
+            <img src = "image/first.png">
+        </div>
+    </section>
     
 </body>
 </html>
